test/nl/formats/liberty/benchmarks/errors/bundle_missing_members_error.lib
library (example) {
  cell ("cell_def") {
    bundle (D) {
      pin (D0) {
        direction : input;
      }
    }
  }
}
